# StellarHunts

./: .gitignore  .tool-versions  CONTRIBUTING.md  LICENSE  Makefile  README.md  package-lock.json  package.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: build.yml  release.yml
backend/: .gitignore  README.md  package-lock.json  package.json  test-rewards.http  tsconfig.json
backend/scripts/: bench-mint.ts
backend/src/: app.controller.ts  app.module.ts  app.service.ts  main.ts
backend/src/achievements/: achievements.controller.spec.ts  achievements.controller.ts  achievements.module.ts  achievements.service.spec.ts  achievements.service.ts
backend/src/activity/: activity.controller.ts  activity.service.ts
backend/src/admin/: admin-role.enum.ts  admin.controller.ts  admin.entity.ts  admin.module.ts  admin.service.ts
backend/src/analytics/: analytics.controller.ts  analytics.service.spec.ts  analytics.service.ts
backend/src/answers/: answers.entity.ts
backend/src/api-key/: api-key.controller.ts  api-key.guard.ts  api-key.service.ts
backend/src/audit-log/: audit-log.controller.ts  audit-log.service.ts
backend/src/auth/: auth.controller.ts  auth.http  auth.module.ts  auth.service.ts
backend/src/badge/: badge.controller.ts  badge.module.ts  (+1 more)
backend/test/: content.e2e-spec.ts  feedback.http  in-app-notifications.e2e-spec.ts  nft-claim.service.spec.ts  puzzle-category.e2e-spec.ts  rewards.e2e-spec.ts
docs/: architecture.md
frontend/: README.md  REFERRAL_SYSTEM.md  next.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.js  not-found.js  page.js  page.tsx
frontend/components/: BlogCard.jsx  Footer.jsx  Navbar.jsx  NftCard.jsx  NftGalleryVirtualized.tsx  Pagination.jsx  PuzzleComponent.jsx  ReferralCard.jsx  ReferralLink.jsx  ReferralNotification.jsx  ReferralStats.jsx  SearchBar.jsx  ShareButton.jsx
frontend/hooks/: usePuzzleReviews.js  useReferral.js
frontend/lib/: authOptions.ts  data.js
frontend/services/: puzzleReviewService.js
frontend/store/: useGameStore.js
onchain/: .gitignore  Cargo.toml  deny.toml
onchain/contracts/stellar_hunts/: Cargo.toml
onchain/contracts/stellar_hunts/src/: lib.rs  test.rs
onchain/contracts/stellar_hunts_nft/: Cargo.toml
onchain/contracts/stellar_hunts_nft/src/: lib.rs  test.rs
onchain/contracts/stellar_hunts_receiver/: Cargo.toml
onchain/contracts/stellar_hunts_receiver/src/: lib.rs
onchain/contracts/stellar_hunts_types/: Cargo.toml
onchain/contracts/stellar_hunts_types/src/: lib.rs
onchain/src/: interface.cairo  lib.cairo  utils.cairo
onchain/src/contracts/: scavenger_hunt.cairo  scavenger_hunt_nft.cairo  stellar_hunt.cairo  stellar_hunt_nft.cairo
onchain/tests/: test_scavenger_hunt.cairo  test_stellar_hunt.cairo  test_stellar_hunt_nft.cairo
src/game-notifications/: game-notifications.module.ts
(+531 files in other folders)
