[package]
name = "stellar-hunts"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
# `rlib` is required so other workspace crates can depend on this contract
# via `path = "..."` and import its Rust items (e.g. the `stellar_hunts_nft`
# re-export + `Client`). `cdylib` is required for the deployable WASM artifact.
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }
stellar-hunts-nft = { path = "../stellar_hunts_nft" }
stellar-hunts-types = { path = "../stellar_hunts_types" }

[dev-dependencies]
# `testutils` enables `mock_all_auths`, `register_contract`, and
# `Address::generate` for host-side unit tests.
soroban-sdk = { workspace = true, features = ["testutils"] }
